--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   share_plus:
   webview_flutter:
 
+  firebase_core: ^1.15.0
+    firebase_analytics: ^9.1.6
+    firebase_auth: ^3.3.15
+    cloud_firestore: ^3.1.13
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
