--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
+
+
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_application_2">
-            <uses-permission android:name="android.permission.INTERNET" />
+                <uses-permission android:name="android.permission.INTERNET" />
 
    <application
-        android:label="eSchool"
+        android:label="flutter_application_2"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -24,9 +26,9 @@
               android:resource="@style/NormalTheme"
               />
             <intent-filter>
-    <action android:name="FLUTTER_NOTIFICATION_CLICK" />
-    <category android:name="android.intent.category.DEFAULT" />
-</intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
