--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.0.9
   open_file: ^3.2.1
   syncfusion_flutter_pdfviewer: ^20.1.50-beta
+  sqflite:
 
 dev_dependencies:
   flutter_test:
