--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   google_fonts: ^2.3.1
   share_plus:
   webview_flutter:
+  cloud_firestore: ^3.1.13
+  firebase_auth: ^3.3.15
   firebase_core: ^1.15.0
+  fluttertoast: ^8.0.9
   firebase_database: ^9.0.9
   firebase_messaging: ^11.2.14
   flutter_local_notifications: ^9.4.1
