--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_messaging: ^11.2.14
   flutter_local_notifications: ^9.4.1
 
+  file_picker: ^4.5.1
+
   syncfusion_flutter_pdf: 20.1.50-beta
   path_provider: ^2.0.9
   open_file: ^3.2.1
