--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
 
   file_picker: ^4.5.1
 
+  school_ui_toolkit: ^5.0.0
+
   syncfusion_flutter_pdf: 20.1.50-beta
   path_provider: ^2.0.9
   open_file: ^3.2.1
