--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   syncfusion_flutter_pdf:
   path_provider: ^2.0.9
   open_file: ^3.2.1
-  syncfusion_flutter_pdfviewer:
+  syncfusion_flutter_pdfviewer: ^20.1.55-beta
   sqflite:
   intl:
 dev_dependencies:
