--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   file_picker: ^4.5.1
 
   font_awesome_flutter: ^10.1.0
-  syncfusion_flutter_pdf:
+  # syncfusion_flutter_pdf:
   path_provider: ^2.0.9
   open_file: ^3.2.1
   syncfusion_flutter_pdfviewer: ^20.1.55-beta
